# actor_sim

./: .gitignore  README.md
launch/: actors_world.launch
src/actor_sim/: CMakeLists.txt
src/actor_sim/worlds/: actors_world_test_2.world
src/actor_sim/worlds/actor_world_files/: actor_collisions.erb  actor_world_generator.erb  sitting_human_generator.erb  sitting_human_poses.erb
worlds/: actors_world.world
worlds/actor_world_files/: standing_areas.erb  standing_humans_generator.erb  walking_human_generator.erb  walking_trajectories.erb
